--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,11 +30,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  fl_chart: ^0.66.1
   plaid_flutter: ^3.1.4
-  sqflite: ^2.3.2
-  path_provider: ^2.1.2
-  intl: ^0.19.0
+  hive: ^2.2.3
+  fl_chart: ^0.66.1
+  ml_algo: ^16.17.10
+  ml_dataframe: ^1.6.0
+  ml_preprocessing: ^7.0.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -43,6 +44,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  mockito: ^5.4.4
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
