--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,9 @@ dependencies:
   flutter:
     sdk: flutter
   plaid_flutter: ^3.1.4
-  hive: ^2.2.3
+  hive: ^4.0.0-dev.2
+  isar_flutter_libs: ^4.0.0-dev.14
+  path_provider: ^2.1.2
   fl_chart: ^0.66.1
   ml_algo: ^16.17.10
   ml_dataframe: ^1.6.0
