--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 0.0.0+1
 
 environment:
   sdk: ">=3.2.6 <4.0.0"
@@ -31,8 +31,8 @@ dependencies:
   flutter:
     sdk: flutter
   plaid_flutter: ^3.1.4
-  hive: ^4.0.0-dev.2
-  isar_flutter_libs: ^4.0.0-dev.14
+  isar: ^3.1.0+1
+  isar_flutter_libs: ^3.1.0+1
   path_provider: ^2.1.2
   fl_chart: ^0.66.1
   ml_algo: ^16.17.10
@@ -47,6 +47,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   mockito: ^5.4.4
+  isar_generator: ^3.1.0+1
+  build_runner: ^2.4.8
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
