--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   ml_algo: ^16.17.10
   ml_dataframe: ^1.6.0
   ml_preprocessing: ^7.0.2
+  http: ^1.2.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
