--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -89,11 +89,11 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
-            VALUE "CompanyName", "com.splch" "\0"
+            VALUE "CompanyName", "net.splch" "\0"
             VALUE "FileDescription", "butterfly_finance" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
             VALUE "InternalName", "butterfly_finance" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2024 com.splch. All rights reserved." "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2024 net.splch. All rights reserved." "\0"
             VALUE "OriginalFilename", "butterfly_finance.exe" "\0"
             VALUE "ProductName", "butterfly_finance" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
