--- a/.github/workflows/flutter_ci.yaml
+++ b/.github/workflows/flutter_ci.yaml
@@ -25,4 +25,4 @@ jobs:
         run: flutter pub run build_runner build
 
       - name: Run Flutter tests
-        run: flutter test
+        run: flutter test -j 1
